# ParallelComputingDev

OpenMP_ConceptStudy/mandel_problem/: 00_mandelbrot_area_wrong.cpp
OpenMP_ConceptStudy/simple_numerical_integration/: 00_num_int_no_parallel.cpp  04_num_int_paralel_atomicsync.cpp
hello_world/: CMakeLists.txt  hello_world.cpp
mandel_problem/: 01_mandelbrot_area_fixed.cpp  CMakeLists.txt
simple_numerical_integration/: 03_num_int_paralel_criticalsync.cpp  05_num_int_paralel_loopconstruct.cpp  06_num_int_paralel_withsmallestchanges.cpp  CMakeLists.txt  num_int_no_parallel.cpp  num_int_paralel_falsesharing.cpp  num_int_paralel_nofalsesharing.cpp
